Update to new versions of plugins and parent-pom