@@ -1,12 +1,10 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.jvnet.hudson.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.338</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.395</version>
     </parent>
 
   <artifactId>systemloadaverage-monitor</artifactId>
@@ -15,7 +13,11 @@
 
   <name>Slave Monitor for system load average</name>
   <description>This plugin checks the slaves system load averages.</description>
-    <url>http://wiki.hudson-ci.org/display/HUDSON/System+Load+Average+Monitor+Plugin</url>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/System+Load+Average+Monitor+Plugin</url>
+  <issueManagement>
+    <system>JIRA</system>
+    <url>http://issues.jenkins-ci.org/browse/JENKINS</url>
+  </issueManagement>
 
     <developers>
         <developer>
@@ -26,20 +28,12 @@
         </developer>
 
     </developers>
-
     <repositories>
         <repository>
-            <id>m.g.o-public</id>
-            <url>http://maven.glassfish.org/content/groups/public/</url>
+            <id>jenkins-artifacts</id>
+            <url>http://maven.jenkins-ci.org/content/groups/artifacts/</url>
         </repository>
     </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>m.g.o-public</id>
-            <url>http://maven.glassfish.org/content/groups/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <properties>
         <!--
@@ -49,15 +43,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>servlet-api-2.5</artifactId>
-            <version>6.1.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.jvnet.hudson</groupId>
             <artifactId>htmlunit</artifactId>
-            <version>2.2-hudson-11</version>
+            <version>2.6-hudson-2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -75,26 +63,16 @@
         <dependency>
             <groupId>org.kohsuke.stapler</groupId>
             <artifactId>stapler</artifactId>
-            <version>1.126</version>
+            <version>1.156</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>instrument</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.1</version>
                 <executions>
                     <execution>
                         <phase>site</phase>
@@ -106,38 +84,6 @@
                         <configuration>
                             <verbose>true</verbose>
                             <ignoreDirect>false</ignoreDirect>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip><!-- tests now run by maven-junit-plugin -->
-                </configuration>
-            </plugin>
-            <plugin>
-                <!-- see http://maven-junit-plugin.kenai.com/ for more info -->
-                <groupId>com.sun.maven</groupId>
-                <artifactId>maven-junit-plugin</artifactId>
-                <version>1.5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <fork>true</fork>
-                            <concurrency>1</concurrency> <!-- -1 means # of processors in the system -->
-                            <argLine>-XX:MaxPermSize=192m -Xmx256m -Dfile.encoding=UTF-8</argLine>
-                            <systemProperties>
-                                <property>
-                                    <!-- use AntClassLoader that supports predictable file handle release -->
-                                    <name>hudson.ClassicPluginStrategy.useAntClassLoader</name>
-                                    <value>true</value>
-                                </property>
-                            </systemProperties>
                         </configuration>
                     </execution>
                 </executions>
@@ -162,24 +108,26 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
                 <configuration>
                     <show>private</show>
                     <quiet>true</quiet>
                     <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-                        <link>https://hudson.dev.java.net/nonav/javadoc/</link>
-                        <link>https://stapler.dev.java.net/nonav/javadoc/</link>
+                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
+                        <link>http://javadoc.jenkins-ci.org/</link>
                     </links>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.4.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -216,16 +164,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
                     <formats>
                         <format>xml</format>
@@ -236,10 +177,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jdepend-maven-plugin</artifactId>
+                <version>2.0-beta-2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.1</version>
             </plugin>
         </plugins>
     </reporting>
